[package]
name = "triseratops"
version = "0.0.2"
authors = ["Jan Holthuis <jan.holthuis@ruhr-uni-bochum.de>"]
description = "The robust, in-depth Serato Parser & Serializer."
readme = "README.md"
repository = "https://github.com/Holzhaus/triseratops"
license = "AGPL-3.0-or-later"
keywords = ["serato", "dj", "tag", "database", "parser"]
categories = ["parser-implementations"]
edition = "2021"

[dependencies]
nom = "7.1"
base64 = "0.21"
thiserror = "1.0"

[dev-dependencies]
id3 = "1.8"
textwrap = "0.16"
