[package]
name = "triseratops"
version = "0.0.3"
authors = ["Jan Holthuis <jan.holthuis@ruhr-uni-bochum.de>"]
description = "The robust, in-depth Serato Parser & Serializer."
readme = "README.md"
repository = "https://github.com/Holzhaus/triseratops"
license = "AGPL-3.0-or-later"
keywords = ["serato", "dj", "tag", "database", "parser"]
categories = ["parser-implementations"]
edition = "2024"

[dependencies]
nom = "7"
base64 = "0.22"
thiserror = "2"

[dev-dependencies]
id3 = "1"
textwrap = "0.16"
